# mono3D-two-plane-geo

./: .env.example  .gitignore  CLAUDE.md  README.md  carla_realtime_test.py  main.py  pyproject.toml
carla_module/: carla_road_segmentation.py  change.md  realtime_test.py
config/: convert_metadata_to_gt.yaml  inference_road_lane_segmentation.yaml  train_road_segmentation.yaml
libs/: road_segmentation.py  train_road_segmentation.py
libs/engine/: train.py
libs/inference/: carla_road_segmentation.py  lane_fitting.py  lane_segmentation.py  line_segmentation.py  pipeline.py  pitch_estimation.py  road_segmentation.py
libs/model/: resnet101.py  restnet101.py
libs/visualization/: carla_visualization.py  lane_visualization.py
pidnet_models/: __init__.py
scripts/: setup_elsed.py
utils/: batch_inference_road_lane_segmentation.py  convert_metadata_to_gt.py  env_setup.py  inference_road_lane_segmentation.py  plot_frameId_and_pitch.py  train_road_segmentation.py
utils/analyze_error/: analyze_interval_error.py  find_top_error.py
