[project]
name = "mono3d-two-plane-ego"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pyelsed",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv.sources]
# elsed：使用本機修補版原始碼（需先執行 python scripts/setup_elsed.py）
pyelsed = { path = "./elsed_src" }
# carla：機器特定 .whl，路徑因機器而異，需手動安裝（見 .env.example）
# 安裝指令：uv pip install $CARLA_WHL_PATH
